Fix docs header z-index. (#65)

--- a/arrow-site/docs/_sass/components/docs/_doc-header.scss
+++ b/arrow-site/docs/_sass/components/docs/_doc-header.scss
@@ -95,7 +95,7 @@
     .doc-header {
       position: sticky;
       top: 0;
-      z-index: 2;
+      z-index: 4;
     }
   }
 }
